replace clazz.newInstance() with clazz.getDeclaredConstructor().newInstance() (#573)